--- a/(FE)/css/addproduct.css
+++ b/(FE)/css/addproduct.css
@@ -244,91 +244,110 @@
         display: block; /* Tampilkan menu dropdown saat dropdown aktif */
       }
     }
-    @media (max-width:450px) {
-        .content{
-          padding: 20px;
-        }
-      
-        .box-body {
-          border: 1px solid #000;
-          border-radius: 8px;
-          padding: 15px;
-          margin-top: 15px;
-          width: 370px;
-          height: 200px; 
-        }
-      
-        .footer {
-          width: 100%;
-          height: auto;
-          background-color: #333;
-          color: #fff;
-          padding: 40px 40px;
-        }
-        
-        .footer-container {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-        }
-        
-        .footer-links h3{
-          font-size: 1rem;
-          margin-bottom: 10px;    
-        }
-        
-        .footer-links ul {
-          list-style-type: none;
-        }
-        
-        .footer-links ul li a {
-          color: #ccc;
-          text-decoration: double;
-          font-size: 1rem;
-          transition: color 0.3s ease;
-          cursor: pointer;
-        }
-        
-        .footer-service h3{
-          font-size: 1rem;
-          margin-bottom: 10px;  
-        }
-        
-        .footer-service ul{
-          list-style-type: none;
-        }
-        
-        .footer-service ul li a {
-          color: #ccc;
-          text-decoration: double;
-          font-size: 0.8rem;
-          transition: color 0.3s ease;
-          cursor: pointer;
-        }
-        
-        .footer-social {
-          display: flex;
-          flex-direction: column;
-          gap: 10px;
-          cursor: pointer;
-        }
-        
-        .social-icons {
-          display: flex;
-          flex-direction: row;
-          gap: 10px;
-          cursor: pointer;
-        }
-        
-        .footer-social h4{
-          font-size: 1rem;
-        }
-        
-        .footer-bottom {
-          position: absolute;
-          text-align: center;
-          font-size: 0.9rem;
-          color: #aaa;
-          margin-top: 20px;
-        }
+    @media (max-width:768px) {
+      .navbar{
+        padding: 5px 10px;
       }
+      
+      .navbar-center {
+        display: none; /* Sembunyikan menu utama */
+      }
+    
+      .dropdown {
+        display: block; /* Tampilkan dropdown */
+      }
+    
+      .dropdown-btn {
+        display: block; /* Tampilkan tombol dropdown */
+      }
+    
+      .dropdown-menu {
+        display: none; /* Default: sembunyikan menu dropdown */
+      }
+    
+      .dropdown.show .dropdown-menu {
+        display: block; /* Tampilkan menu dropdown saat dropdown aktif */
+      }
+      .content{
+        flex-direction: column;
+      }
+      .footer {
+        width: 100%;
+        height: auto;
+        min-height: 150px;
+        background-color: #333;
+        padding: 20px 20px;
+        color: #fff;
+      }
+    
+      .footer-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+    
+      .footer-links h3{
+        font-size: 1rem;
+        display: none;
+        margin-bottom: 10px;    
+      }
+      
+      .footer-links ul {
+        display: none; 
+        list-style-type: none;
+      }
+      
+      .footer-links ul li a {
+        color: #ccc;
+        text-decoration: double;
+        font-size: 1rem;
+        transition: color 0.3s ease;
+        cursor: pointer;
+      }
+      
+      .footer-service h3{
+        display: none; 
+        font-size: 1rem;
+        margin-bottom: 10px;  
+      }
+      
+      .footer-service ul{
+        display: none; 
+        list-style-type: none;
+      }
+      
+      .footer-service ul li a {
+        color: #ccc;
+        text-decoration: double;
+        font-size: 0.8rem;
+        transition: color 0.3s ease;
+        cursor: pointer;
+      }
+      
+      .footer-social {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        cursor: pointer;
+      }
+      
+      .social-icons {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        cursor: pointer;
+      }
+      
+      .footer-social h4{
+        font-size: 1rem;
+      }
+      
+      .footer-bottom {
+        position: absolute;
+        text-align: center;
+        font-size: 0.9rem;
+        color: #aaa;
+        margin-top: 20px;
+      }
+    }
+    
