--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -12,7 +12,6 @@
   justify-content: space-between;
   padding: 10px 20px;
   background-color: #fff;
-  border-bottom: 3px solid #ddd;
 }
 
 .navbar-left {
@@ -65,7 +64,6 @@
   border: 1px solid #ffffff;
   padding: 5px;
   cursor: pointer;
-  display: none; /* Tersembunyi pada layar besar */
 }
 
 .dropdown-menu {
@@ -95,21 +93,70 @@
 
 .content {
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
   padding: 80px;
 }
 
-.box {
+.image-container {
   display: flex;
-  width: 100%;
+  justify-content: flex-end; 
+  gap: 10px; 
+  margin-top: 20px;
+}
+
+.box {
+  display: inline-block;
 }
 
 .pic {
-  width: 400px;
-  height: 350px;
-  margin-right: 20px;
-  border-radius: 8px; 
+  width: 150px; 
+  height: auto;
+  cursor: pointer;
+  transition: transform 0.3s ease;
 }
+
+.pic:hover {
+  transform: scale(2); 
+}
+
+.modal {
+  display: none; 
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  overflow: auto;
+  text-align: center;
+}
+
+.modal-content {
+  max-width: 80%;
+  max-height: 80%;
+  margin: auto;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  color: #fff;
+  font-size: 35px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 
 .product {
   display: flex;
@@ -137,16 +184,13 @@
   margin-top: 4px;
 }
 
-.box-body {
+.text {
+  display: flex;
   border: 1px solid #000;
   border-radius: 8px;
-  padding: 15px;
-  margin-top: 15px;
+  padding: 10px;
   width: 400px;
   height: 200px; 
-}
-
-.text {
   font-size: 14px;
   color: #818181;
 }
@@ -194,6 +238,7 @@
   padding-bottom: 10px;
   margin-left: 5px;
   }
+
   .whatsapp:hover {
     background-color: rgba(0, 154, 54, 0.798);
     opacity: 0.7;
@@ -203,102 +248,80 @@
     background-color: rgb(228, 220, 220);
   }
 
-.footer {
-  width: 100%;
-  height: 300px;
-  background-color: #333;
-  color: #fff;
-}
-
-.footer-container {
-  display: flex;
-  align-items: flex-start;
-}
-
-.footer-links{
-  margin-left: 40px;
-  margin-top: 50px;
-}
-
-.footer-links h3{
-  font-size: 1.2rem;
-  text-align: left;
-  margin-bottom: 10px;    
-}
-
-.footer-links ul {
-  list-style-type: none;
-}
-
-.footer-links ul li a {
-  color: #ccc;
-  text-decoration: double;
-  font-size: 1.1rem;
-  transition: color 0.3s ease;
-  cursor: pointer;
-}
-
-.footer-links a{
-  margin-top: 20px;
-}
-
-.footer-service{
-  margin-top: 50px;
-  margin-left: 150px;
-}
-
-.footer-service h3{
-  font-size: 1.2rem;
-  text-align: left;
-}
-
-.footer-service ul{
-  list-style-type: none;
-  padding: 10px;
-}
-
-.footer-service ul li a {
-  color: #ccc;
-  text-decoration: double;
-  font-size: 1rem;
-  transition: color 0.3s ease;
-  cursor: pointer;
-}
-
-.footer-social {
-  display: flex;
-  flex-direction: column;
-  margin-left: 550px;
-  gap: 10px;
-  cursor: pointer;
-}
-
-.social-icons {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  cursor: pointer;
+  .footer {
+    width: 100%;
+    height: 300px;
+    background-color: #333;
+    color: #fff;
+    padding: 40px 40px;
+  }
   
-}
-.call .envelope{
-  text-align: left;
-  margin-left: 550px;
-}
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .footer-links h3{
+    font-size: 1.2rem;
+    margin-bottom: 10px;    
+  }
+  
+  .footer-links ul {
+    list-style-type: none;
+  }
+  
+  .footer-links ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 1.1rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .footer-service h3{
+    font-size: 1.2rem;
+    margin-bottom: 10px;  
+  }
+  
+  .footer-service ul{
+    list-style-type: none;
+  }
+  
+  .footer-service ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .footer-social {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .social-icons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .footer-social h4{
+    font-size: 1.2rem;
+  }
+  
+  .footer-bottom {
+    position: absolute;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #aaa;
+    margin-top: 100px;
+  }
 
-.footer-social h4{
-  font-size: 1.2rem;
-  margin-top: 50px;
-}
-
-.footer-bottom {
-  position: absolute;
-  text-align: center;
-  font-size: 0.9rem;
-  color: #aaa;
-  margin-top: 70px;
-  margin-left: 30px;
-}
-@media (max-width:800px) {
+@media (max-width:768px) {
   .navbar-center {
     display: none; /* Sembunyikan menu utama */
   }
@@ -318,14 +341,161 @@
   .dropdown.show .dropdown-menu {
     display: block; /* Tampilkan menu dropdown saat dropdown aktif */
   }
+  .image-container {
+    display: flex;
+    justify-content: space-between; 
+    margin-top: 20px;
+  }
   .content{
     flex-direction: column;
   }
+  .pic {
+    width: 125px; 
+    height: auto;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+  }
+  
+  .pic:hover {
+    transform: scale(2); 
+  }
+  
   .product {
     display: flex;
     flex-direction: column;
     padding-top: 20px;
     margin: 0;
     width: 100%;
+  }
+  .footer {
+    width: 100%;
+    height: auto;
+    min-height: 150px;
+    background-color: #333;
+    padding: 20px 20px;
+    color: #fff;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .footer-links h3{
+    font-size: 1rem;
+    display: none;
+    margin-bottom: 10px;    
+  }
+  
+  .footer-links ul {
+    display: none; 
+    list-style-type: none;
+  }
+  
+  .footer-links ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .footer-service h3{
+    display: none; 
+    font-size: 1rem;
+    margin-bottom: 10px;  
+  }
+  
+  .footer-service ul{
+    display: none; 
+    list-style-type: none;
+  }
+  
+  .footer-service ul li a {
+    color: #ccc;
+    text-decoration: double;
+    font-size: 0.8rem;
+    transition: color 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .footer-social {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .social-icons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .footer-social h4{
+    font-size: 1rem;
+  }
+  
+  .footer-bottom {
+    position: absolute;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #aaa;
+    margin-top: 20px;
+  }
+}
+@media (max-width:450px) {
+  .navbar{
+    padding: 5px 10px;
+  }
+
+  .site-name {
+    flex-grow: 1;
+    font-size: 20px; 
+    font-weight: bold;
+    font-style: italic; 
+    line-height: 1.0rem; 
+    margin: 0; 
+  }
+
+  .content{
+    padding: 20px;
+  }
+
+  .text {
+    border: 1px solid #000;
+    border-radius: 8px;
+    padding: 15px;
+    margin-top: 15px;
+    width: auto;
+    height: auto; 
+  }
+  
+  .footer-social {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .social-icons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .footer-social h4{
+    font-size: 0.9rem;
+  }
+  
+  .footer-bottom {
+    position: absolute;
+    text-align: center;
+    font-size: 0.7rem;
+    color: #aaa;
+    margin-top: 15px;
   }
 }
