--- a/(FE)/css/aboutus.css
+++ b/(FE)/css/aboutus.css
@@ -197,7 +197,7 @@ body {
 }
 
 .desa-text {
-    max-width: 500px;
+    max-width: 800px;
 }
 
 .desa-text h2 {
@@ -243,7 +243,7 @@ body {
 }
 
 .umkm-text {
-    width: 500px;
+    width: 700px;
     font-family: 'Poppins';
     text-align: start;
     margin: 0 50px;
@@ -456,7 +456,7 @@ body {
   .umkm-text {
     width: 100%;
     margin: 0;
-    max-width: 370px;
+    max-width: 570px;
   }
 
   .umkm-text h2 {
@@ -472,23 +472,26 @@ body {
   .footer {
     width: 100%;
     height: auto;
+    min-height: 150px;
     background-color: #333;
+    padding: 20px 20px;
     color: #fff;
-    padding: 40px 40px;
   }
-  
+
   .footer-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
-  
+
   .footer-links h3{
     font-size: 1rem;
+    display: none;
     margin-bottom: 10px;    
   }
   
   .footer-links ul {
+    display: none; 
     list-style-type: none;
   }
   
@@ -501,11 +504,13 @@ body {
   }
   
   .footer-service h3{
+    display: none; 
     font-size: 1rem;
     margin-bottom: 10px;  
   }
   
   .footer-service ul{
+    display: none; 
     list-style-type: none;
   }
   
