--- a/public/css/aboutus.css
+++ b/public/css/aboutus.css
@@ -197,7 +197,7 @@ color: #6F4B9B;
 }
 
 .desa-text {
-  max-width: 500px;
+  max-width: 800px;
 }
 
 .desa-text h2 {
@@ -208,6 +208,7 @@ color: #6F4B9B;
 }
 
 .desa-text p {
+  width: auto;
   font-family: 'Poppins';
   font-size: 16px;
   line-height: 1.6;
@@ -242,7 +243,7 @@ padding: 20px;
 }
 
 .umkm-text {
-  width: 500px;
+  width: 700px;
   font-family: 'Poppins';
   text-align: start;
   margin: 0 50px;
@@ -455,7 +456,7 @@ margin-top: 100px;
 .umkm-text {
   width: 100%;
   margin: 0;
-  max-width: 370px;
+  max-width: 570px;
 }
 
 .umkm-text h2 {
@@ -471,9 +472,10 @@ margin-top: 100px;
 .footer {
   width: 100%;
   height: auto;
+  min-height: 150px;
   background-color: #333;
+  padding: 20px 20px;
   color: #fff;
-  padding: 40px 40px;
 }
 
 .footer-container {
@@ -484,10 +486,12 @@ margin-top: 100px;
 
 .footer-links h3{
   font-size: 1rem;
+  display: none;
   margin-bottom: 10px;    
 }
 
 .footer-links ul {
+  display: none; 
   list-style-type: none;
 }
 
@@ -500,11 +504,13 @@ margin-top: 100px;
 }
 
 .footer-service h3{
+  display: none; 
   font-size: 1rem;
   margin-bottom: 10px;  
 }
 
 .footer-service ul{
+  display: none; 
   list-style-type: none;
 }
 
